--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -1,11 +1,24 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">@color/colorAccent</item>
+        <item name="colorPrimaryDark">@color/colorAccent</item>
         <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+    <style name="ArionDialogFragment" parent="Theme.AppCompat.Dialog">
+
+        <item name="android:width">100dp</item>
+        <item name="android:height">100dp</item>
+
+        <item name="android:layout_width">100dp</item>
+        <item name="android:layout_height">100dp</item>
+
+        <item name="android:padding">16dp</item>
+        <item name="android:color">@color/colorAccent</item>
+
     </style>
 
 </resources>
